I'm probably going to need some js in order to prevent text from being uri encoded in post requests since that would turn all white space into the same character