@@ -3,7 +3,6 @@ package io.github.mxz_schwarz.text_editor;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpServer;
 import java.net.InetSocketAddress;
-import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.io.IOException;
@@ -13,8 +12,8 @@ class Server {
 
     private Server() {}
 
-    private static Path dir = null; 
-    private static final Path startDir = Path.of("/home/mxz-schwarz");
+    private static Path dir = Path.of("/home/mxz-schwarz");
+    private static boolean loading = true;
     private static Path file = null;
 
     static void main(String... args) throws IOException {
@@ -27,7 +26,10 @@ class Server {
 
     private static void handleGet(HttpExchange e) throws IOException {
         var path = e.getRequestURI().toString().substring(1);
-        if (path.equals("")) path = "index.html";
+        if (path.equals("")) {
+            path = "index.html";
+            loading = true;
+        }
         respond(e, Files.readAllBytes(Path.of(path)), 
             switch(path.substring(path.lastIndexOf("."))) {
                 case ".js" -> "text/javascript";
@@ -38,16 +40,17 @@ class Server {
     }
 
     private static void handleDir(HttpExchange e) throws IOException {
-        dir = dir == null ? startDir : Path.of("/").resolve(Path.of("/dir").relativize(Path.of(e.getRequestURI().toString())));
+        if (loading) loading = false;
+        else 
+            dir = Path.of("/").resolve(Path.of("/dir").relativize(Path.of(e.getRequestURI().toString())));
         respond(e, Util.formatDir(dir), "text/html");
     }
 
     private static void handleFile(HttpExchange e) throws IOException {
-        var body = e.getRequestBody().readAllBytes();
         if (e.getRequestMethod().equals("GET"))
             respond(e, Util.formatFile(file = Path.of("/").resolve(Path.of("/file").relativize(Path.of(e.getRequestURI().toString())))), "text/plain");
         else if (file != null)
-            Files.write(file, Arrays.copyOfRange(body, 5, body.length));
+            Files.write(file, Util.objify(e.getRequestBody().readAllBytes()).get("file").getBytes());
         e.sendResponseHeaders(204, -1);
     }
 
